force-app/main/default/objects/Deal_Protection_Participant__c/Deal_Protection_Participant__c.object-meta.xml
<CustomObject>
<label
  >Deal Protection Participant</label><pluralLabel
  >Deal Protection Participants</pluralLabel>
    <nameField><displayFormat>DPP-{00000000}</displayFormat><label
    >Deal Protection Participant Number</label><type
    >AutoNumber</type></nameField>
    <sharingModel>Private</sharingModel><externalSharingModel
  >Private</externalSharingModel><enableReports
  >true</enableReports><enableActivities>false</enableActivities>
</CustomObject>