force-app/main/default/objects/Deal_Protection_Participant__c/fields/Contribution_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Contribution_Percentage__c</fullName>
    <label>Contribution Percentage</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>