force-app/main/default/objects/Deal_Protection_Participant__c/fields/Deal_Participant__c.field-meta.xml
<CustomField>
    <fullName>Deal_Participant__c</fullName>
    <label>Deal Participant</label>
    <type>Lookup</type>
    <referenceTo>Deal_Participant__c</referenceTo>
    <relationshipLabel>Protection Participation</relationshipLabel>
    <relationshipName>Protection_Participation</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
    <required>true</required>
</CustomField>