force-app/main/default/objects/Deal_Protection_Participant__c/fields/Partner_Account__c.field-meta.xml
<CustomField>
    <fullName>Partner_Account__c</fullName>
    <label>Partner Account</label>
    <type>Lookup</type>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Deal Protection Participants</relationshipLabel>
    <relationshipName>Deal_Protection_Participants</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
    <required>true</required>
</CustomField>