force-app/main/default/objects/Deal_Protection_Participant__c/fields/Protection_Role__c.field-meta.xml
<CustomField>
    <fullName>Protection_Role__c</fullName>
    <label>Protection Role</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Primary Protected Partner</fullName><default
        >false</default><label>Primary Protected Partner</label></value>
            <value><fullName>Shared Protected Partner</fullName><default
        >false</default><label>Shared Protected Partner</label></value>
            <value><fullName>Co-Sell Protected Partner</fullName><default
        >false</default><label>Co-Sell Protected Partner</label></value>
            <value><fullName>Referral Participant</fullName><default
        >false</default><label>Referral Participant</label></value>
            <value><fullName>Implementation Participant</fullName><default
        >false</default><label>Implementation Participant</label></value>
            <value><fullName>Non-Protected Participant</fullName><default
        >false</default><label>Non-Protected Participant</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>