force-app/main/default/objects/Deal_Protection_Participant__c/fields/Share_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Share_Percentage__c</fullName>
    <label>Share Percentage</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>