force-app/main/default/objects/Deal_Protection_Participant__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Proposed</fullName><default>false</default><label
        >Proposed</label></value>
            <value><fullName>Active</fullName><default>false</default><label
        >Active</label></value>
            <value><fullName>Removed</fullName><default>false</default><label
        >Removed</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>